ghost/beezuscomplex-deploy.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: beezuscomplex
  namespace: ghost
spec:
  selector:
    matchLabels:
      app: beezuscomplex
  replicas : 1
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: beezuscomplex
    spec:
      containers:
        - image: ghost:2.37.0
        name: ghost-beezuscomplex
        ports:
        - containerPort: 2368
        volumeMounts:
        - name: beezuscomplex-data
          mountPath: /var/lib/ghost/content
        - name: beezuscomplex-conf
          mountPath: /var/lib/ghost/config.production.json
          subPath: config.production.json
      volumes:
      - name: beezuscomplex-data
        persistentVolumeClaim:
          claimName: beezuscomplex-data
      - name: beezuscomplex-conf
        configMap:
          name: beezuscomplex-conf
          items:
          - key: production.json
            path: config.production.json

---
apiVersion: v1
kind: Service
metadata:
  name: beezuscomplex
  namespace: ghost
  labels:
    app: beezuscomplex
spec:
  ports:
  - name: server
    port: 80
    targetPort: 2368
  selector:
    app: beezuscomplex
