ghost/staticweb-deploy.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: static-web
  namespace: ghost
  labels:
    app: static-web
spec:
  ports:
  - name: server
    port: 80
    targetPort: 80
  selector:
    app: static-web


---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: static-web
  namespace: ghost
spec:
  selector:
    matchLabels:
      app: static-web
  replicas: 2
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: static-web
    spec:
      imagePullSecrets:
        - name: github
      containers:
      - name: static-web
        image: docker.pkg.github.com/ttys0/docker-staticweb/staticweb:1
        command: ["/home/auto-reload-nginx.sh"]
        ports:
        - containerPort: 80
        volumeMounts:
        - mountPath: /etc/nginx/conf.d
          name: config
        - mountPath: /usr/share/nginx/html
          name: data
      volumes:
      - name: config
        configMap:
          name: static-web-conf
      - name: data
        persistentVolumeClaim:
          claimName: static-web-data
---
