ghost/108minutes-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: 108minutes
  namespace: ghost
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/from-to-www-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: "50m"
spec:
  rules:
    - host: 108minutes.net
      http:
        paths:
          - path: /
            backend:
              serviceName: www108minutes
              servicePort: 80
          - path: /.well-known
            backend:
              serviceName: static-web
              servicePort: 80
  tls:
    - hosts:
        - 108minutes.net
        - www.108minutes.net
      secretName: 108minutes-tls
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ttys0
  namespace: ghost
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/from-to-www-redirect: "true"
spec:
  rules:
    - host: ttys0.net
      http:
        paths:
          - path: /
            backend:
              serviceName: www108minutes
              servicePort: 80
          - path: /.well-known
            backend:
              serviceName: static-web
              servicePort: 80
  tls:
    - hosts:
        - ttys0.net
        - www.ttys0.net
      secretName: ttys0-tls
