ghost/108minutes.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: 108minutes
  namespace: ghost
spec:
  selector:
    matchLabels:
      app: 108minutes
  replicas : 1
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: 108minutes
    spec:
      containers:
        - image: ghost:3.18.1
          name: ghost-108minutes
          ports:
            - containerPort: 2368
          volumeMounts:
            - name: 108minutes-data
              mountPath: /var/lib/ghost/content
            - name: 108minutes-conf
              mountPath: /var/lib/ghost/config.production.json
              subPath: config.production.json
      volumes:
        - name: 108minutes-data
          persistentVolumeClaim:
            claimName: 108minutes
        - name: 108minutes-conf
          configMap:
            name: 108minutes-conf
            items:
              - key: production.json
                path: config.production.json

---
apiVersion: v1
kind: Service
metadata:
  name: www108minutes
  namespace: ghost
  labels:
    app: 108minutes
spec:
  ports:
    - name: server
      port: 80
      targetPort: 2368
  selector:
    app: 108minutes

---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: 108minutes
  namespace: ghost
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/from-to-www-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: "50m"
spec:
  rules:
    - host: 108minutes.net
      http:
        paths:
          - path: /
            backend:
              serviceName: www108minutes
              servicePort: 80
          - path: /.well-known
            backend:
              serviceName: static-web
              servicePort: 80
  tls:
    - hosts:
        - 108minutes.net
        - www.108minutes.net
      secretName: 108minutes-tls
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: 108minutes-ext
  namespace: ghost
  annotations:
    kubernetes.io/ingress.class: nginx-external
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/from-to-www-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: "50m"
spec:
  rules:
    - host: 108minutes.net
      http:
        paths:
          - path: /
            backend:
              serviceName: www108minutes
              servicePort: 80
          - path: /.well-known
            backend:
              serviceName: static-web
              servicePort: 80
  tls:
    - hosts:
        - 108minutes.net
        - www.108minutes.net
      secretName: 108minutes-tls
