ghost/beezuscomplex-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: beezuscomplex
  namespace: ghost
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/from-to-www-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: "50m"
spec:
  rules:
    - host: beezuscomplex.com
      http:
        paths:
          - path: /
            backend:
              serviceName: beezuscomplex
              servicePort: 80
          - path: /.well-known
            backend:
              serviceName: static-web
              servicePort: 80
  tls:
    - hosts:
        - beezuscomplex.com
        - www.beezuscomplex.com
      secretName: beezuscomplex-tls
