ghost/beezuscomplex.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: beezuscomplex
  namespace: ghost
spec:
  selector:
    matchLabels:
      app: beezuscomplex
  replicas : 1
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: beezuscomplex
    spec:
      containers:
        - image: library/ghost:4.15.1
          name: ghost-beezuscomplex
          ports:
            - containerPort: 2368
          volumeMounts:
            - name: beezuscomplex
              mountPath: /var/lib/ghost/content
            - name: beezuscomplex-conf
              mountPath: /var/lib/ghost/config.production.json
              subPath: config.production.json
      volumes:
        - name: beezuscomplex
          persistentVolumeClaim:
            claimName: beezuscomplex
        - name: beezuscomplex-conf
          configMap:
            name: beezuscomplex-conf
            items:
              - key: production.json
                path: config.production.json

---
apiVersion: v1
kind: Service
metadata:
  name: beezuscomplex
  namespace: ghost
  labels:
    app: beezuscomplex
spec:
  ports:
    - name: server
      port: 80
      targetPort: 2368
  selector:
    app: beezuscomplex
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: beezuscomplex
  namespace: ghost
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/from-to-www-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: "50m"
    kubernetes.io/tls-acme: "true"
spec:
  rules:
    - host: beezuscomplex.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: beezuscomplex
                port:
                  number: 80
          - path: /.well-known
            pathType: Prefix
            backend:
              service:
                name: static-web
                port:
                  number: 80
  tls:
    - hosts:
        - beezuscomplex.com
        - www.beezuscomplex.com
      secretName: beezuscomplex-com-cert
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: beezuscomplex-ext
  namespace: ghost
  annotations:
    kubernetes.io/ingress.class: nginx-external
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/from-to-www-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: "50m"
spec:
  rules:
    - host: beezuscomplex.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: beezuscomplex
                port:
                  number: 80
          - path: /.well-known
            pathType: Prefix
            backend:
              service:
                name: static-web
                port:
                  number: 80
  tls:
    - hosts:
        - beezuscomplex.com
        - www.beezuscomplex.com
      secretName: beezuscomplex-com-cert
