ghost/skj.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: skj
  namespace: ghost
spec:
  selector:
    matchLabels:
      app: skj
  replicas : 1
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: skj
    spec:
      containers:
        - image: ghost:3.15.3
          name: ghost-skj
          ports:
            - containerPort: 2368
          volumeMounts:
            - name: skj-data
              mountPath: /var/lib/ghost/content
            - name: skj-conf
              mountPath: /var/lib/ghost/config.production.json
              subPath: config.production.json
      volumes:
        - name: skj-data
          persistentVolumeClaim:
            claimName: skj
        - name: skj-conf
          configMap:
            name: skj-conf
            items:
              - key: production.json
                path: config.production.json

---
apiVersion: v1
kind: Service
metadata:
  name: skj
  namespace: ghost
  labels:
    app: skj
spec:
  ports:
    - name: server
      port: 80
      targetPort: 2368
  selector:
    app: skj

---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: skj
  namespace: ghost
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/from-to-www-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: "50m"
spec:
  rules:
    - host: skj.dev
      http:
        paths:
          - path: /
            backend:
              serviceName: skj
              servicePort: 80
          - path: /.well-known
            backend:
              serviceName: static-web
              servicePort: 80
  tls:
    - hosts:
        - skj.dev
        - www.skj.dev
      secretName: skj-tls
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: skj-ext
  namespace: ghost
  annotations:
    kubernetes.io/ingress.class: nginx-external
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/from-to-www-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: "50m"
spec:
  rules:
    - host: skj.dev
      http:
        paths:
          - path: /
            backend:
              serviceName: skj
              servicePort: 80
          - path: /.well-known
            backend:
              serviceName: static-web
              servicePort: 80
  tls:
    - hosts:
        - skj.dev
        - www.skj.dev
      secretName: skj-tls
